--- a/main.css
+++ b/main.css
@@ -114,7 +114,7 @@ li {
     justify-content: center;
     align-items: center;
 
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 
 .preview h1 {
@@ -131,6 +131,8 @@ li {
 
     max-width: 1300px;
     width: 100%;
+
+    margin-bottom: 40px;
 }
 
 .preview-list li {
@@ -157,7 +159,8 @@ li {
     padding-bottom: 60px;
 }
 
-.about h3 {
+.about h3,
+.preview h3 {
     font-weight: 500;
     margin-top: 50px;
     margin-bottom: 30px;
