--- a/mainmedia.css
+++ b/mainmedia.css
@@ -6,6 +6,12 @@
 }
 
 @media (max-width: 950px) {
+    .nav-list {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
     .nav-list li {
         padding: 30px;
     }
@@ -55,12 +61,6 @@
 }
 
 @media (max-width: 500px) {
-    .nav-list {
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-    }
-
     .nav-list li {
         padding: 10px;
     }
