--- a/mainanimation.css
+++ b/mainanimation.css
@@ -1,4 +1,4 @@
-.nav-list li a:hover {
+/* .nav-list li a:hover {
     font-size: 22px;
     transition: all 0.5s ease-out;
 }
@@ -6,14 +6,14 @@
 .intro a:hover {
     font-size: 26px;
     transition: all 0.5s ease-out;
-}
+} */
 
 .preview-list li:hover {
     margin: 20px;
     transition: all 0.5s ease-out;
 }
 
-.about-list .edu ul li:hover,
+/* .about-list .edu ul li:hover,
 .about-list .skills ul li:hover,
 .about-list .exp ul li:hover {
     font-size: 20px;
@@ -24,4 +24,4 @@
 .contacts p:hover {
     font-size: 24px;
     transition: all 0.5s ease-out;
-}
+} */
